Basic scaffolding and resets.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AppLab</title>
-    <link rel="stylesheet" href="styles/css/styles.min.css" />
+    <link rel="stylesheet" href="styles/css/style.min.css" />
   </head>
-  <body></body>
+  <body>
+      <h1>Hello World</h1>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti odio tenetur quas voluptatibus a saepe voluptas! Consequatur soluta cumque reiciendis, ad odit, quia aperiam repellendus inventore facere, expedita incidunt accusamus.</p>
+  </body>
 </html>
