Hero landing completed

--- a/index.html
+++ b/index.html
@@ -6,9 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AppLab</title>
     <link rel="stylesheet" href="styles/css/style.min.css" />
+    <link
+      rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-      <h1>Hello World</h1>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti odio tenetur quas voluptatibus a saepe voluptas! Consequatur soluta cumque reiciendis, ad odit, quia aperiam repellendus inventore facere, expedita incidunt accusamus.</p>
+    <!-- NAVIGATION -->
+    <nav class="navigation-container">
+      <div class="navigation-container--logo">
+        <a href="#"
+          ><img src="assets/images/applab_logo.png" alt="AppLab logo"
+        /></a>
+      </div>
+      <ul class="navigation-container--menu">
+        <li>Home</li>
+        <li>Key Features</li>
+        <li>Pricing</li>
+        <li>Testimonial</li>
+        <li>FAQ</li>
+        <li class="primary-button">Try for free</li>
+      </ul>
+    </nav>
+    <!-- END OF NAVIGATION -->
+    <!-- LANDING HERO -->
+    <div class="hero-background-container">
+    <div class="hero-shapes-background"></div>
+      <div class="hero-container">
+        <section class="hero-container--text">
+          <div class="hero-container--text--award">
+            <div class="check-icon"><img src="./assets/images/check.png" alt=""></div>
+            <div class="editiors-choice-text">#1 Editiors Choice App of 2020</div>
+          </div>
+          <h1>Best app for your modern lifestyle</h1>
+          <p>
+            Increase your productivity with a simple to-do app, app for managing
+            your personal budgets
+          </p>
+          <div class="hero-container--text--action">
+            <a href="#" class="primary-button">Try for free</a>
+            <a href="#" class="primary-link">Watch demo video</a>
+          </div>
+        </section>
+        <img
+          class="hero-container--image"
+          src="assets/images/hero.png"
+          alt="Manage statistics screenshot"
+        />
+      </div>
+    </div>
+    <!-- END OF LANDING HERO -->
   </body>
 </html>
