Added navigation links, fixed z-index issues.

--- a/index.html
+++ b/index.html
@@ -22,20 +22,21 @@
         /></a>
       </div>
       <ul class="navigation-container--menu">
-        <li>Home</li>
-        <li>Key Features</li>
-        <li>Pricing</li>
-        <li>Testimonial</li>
-        <li>FAQ</li>
-        <li class="primary-button">Try for free</li>
+        <li><a href="#" class="nav-link">Home</a></li>
+        <li><a href="#" class="nav-link">Key Features</a></li>
+        <li><a href="#" class="nav-link">Pricing</a></li>
+        <li><a href="#" class="nav-link">Testimonial</a></li>
+        <li><a href="#" class="nav-link">FAQ</a></li>
+        <li class="primary-button">Try for free</a></li>
       </ul>
     </nav>
     <!-- END OF NAVIGATION -->
     <!-- LANDING HERO -->
     <div class="hero-background-container">
     <div class="hero-shapes-background"></div>
+    <div class="hero-city-background"></div>
       <div class="hero-container">
-        <section class="hero-container--text">
+        <div class="hero-container--text">
           <div class="hero-container--text--award">
             <div class="check-icon"><img src="./assets/images/check.png" alt=""></div>
             <div class="editiors-choice-text">#1 Editiors Choice App of 2020</div>
@@ -43,13 +44,13 @@
           <h1>Best app for your modern lifestyle</h1>
           <p>
             Increase your productivity with a simple to-do app, app for managing
-            your personal budgets
+            your personal budgets.
           </p>
           <div class="hero-container--text--action">
             <a href="#" class="primary-button">Try for free</a>
             <a href="#" class="primary-link">Watch demo video</a>
           </div>
-        </section>
+        </div>
         <img
           class="hero-container--image"
           src="assets/images/hero.png"
