Added brands section

--- a/index.html
+++ b/index.html
@@ -59,5 +59,17 @@
       </div>
     </div>
     <!-- END OF LANDING HERO -->
+    <!-- BRANDS -->
+    <div class="brand-container">
+        <p>Trusted by companies like</p>
+        <div class="brand-container--brands">
+            <img src="assets/images/southwest.png" alt="Southwest Logo">
+            <img src="assets/images/anubis.png" alt="Anubis Logo">
+            <img src="assets/images/alonzo.png" alt="Alonzo Logo">
+            <img src="assets/images/premium_express.png" alt="Premium express Logo">
+            <img src="assets/images/maniac.png" alt="Maniac Logo">
+        </div>
+    </div>
+    <!-- END OF BRANDS -->
   </body>
 </html>
