--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       </ul>
     </nav>
     <!-- END OF NAVIGATION -->
+
     <!-- LANDING HERO -->
     <div class="hero-background-container">
     <div class="hero-shapes-background"></div>
@@ -59,6 +60,7 @@
       </div>
     </div>
     <!-- END OF LANDING HERO -->
+
     <!-- BRANDS -->
     <div class="brand-container">
         <p>Trusted by companies like</p>
@@ -71,5 +73,49 @@
         </div>
     </div>
     <!-- END OF BRANDS -->
+
+    <!-- FEATURES -->
+    <div class="features-container">
+        <img src="assets/images/feature_phone.png" class="features-container--image" alt="Smart search screenshot">
+        <div class="features-container--text">
+            <div class="features-container--text--main">
+                <h2>Awesome apps features</h2>
+                <p>
+                    Increase your productivity with a simple to-do app, app for managing
+                    your personal budgets.
+                </p>
+            </div>
+            <div class="features-container--text--detail">
+                <div class="icon-container pale-red">
+                    <img src="assets/images/speed.png" width="50px" height="auto"  alt="Fast performance icon">
+                </div>
+                <div class="feature-detail">
+                    <h3 class="red-text">Fast Performance</h3>
+                    <p>Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
+                </div>
+            </div>
+
+            <div class="features-container--text--detail">
+                <div class="icon-container pale-blue">
+                    <img src="assets/images/prototyping.png" width="50px" height="auto" alt="Prototyping icon">
+                </div>
+                <div class="feature-detail">
+                    <h3 class="blue-text">Prototyping</h3>
+                   <p>Get your blood tests delivered at home collect a sample from the news your blood tests.</p> 
+                </div>
+            </div>
+
+            <div class="features-container--text--detail">
+                <div class="icon-container pale-green">
+                    <img src="assets/images/vector.png" width="50px" height="auto" alt="Vector editing icon">
+                </div>
+                <div class="feature-detail">
+                    <h3 class="green-text">Vector Editing</h3>
+                    <p>Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- END OF FEATURES -->
   </body>
 </html>
