Jackpots section added

--- a/index.html
+++ b/index.html
@@ -117,5 +117,17 @@
         </div>
     </div>
     <!-- END OF FEATURES -->
+
+    <!-- JACKPOTS -->
+    <div class="jackpots-container">
+        <div class="jackpots-container--main">
+            <h1>Smart jackpots that you may love this anytime &amp; anywhere</h1>
+        </div>
+        <div class="jackpots-container--vertical-line"></div>
+        <div class="jackpots-container--details">
+            <p>The rise of mobile devices transform the way we consume information entirely and the world&apos;s most elegant channels such as Facebook.</p>
+        </div>
+    </div>
+    <!-- END OF JACKPOTS -->
   </body>
 </html>
