Added more-features section, adjusted width & small tweaks.

--- a/index.html
+++ b/index.html
@@ -129,5 +129,38 @@
         </div>
     </div>
     <!-- END OF JACKPOTS -->
+    <!-- MORE FEATRUES -->
+    <div class="more-features-container">
+        <div class="more-features-container--detail">
+            <div class="icon-container pale-red">
+                <img src="assets/images/bill.png" width="50px" height="auto" alt="Automatic payouts icon">
+            </div>
+            <div class="feature-detail">
+                <h3 class="red-text">Automatic Payouts</h3>
+                <p>Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
+            </div>
+        </div>
+
+        <div class="more-features-container--detail">
+            <div class="icon-container pale-blue">
+                <img src="assets/images/network.png" width="50px" height="auto" alt="Network effect">
+            </div>
+            <div class="feature-detail">
+                <h3 class="blue-text">Network Effect</h3>
+                <p>Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
+            </div>
+        </div>
+
+        <div class="more-features-container--detail">
+            <div class="icon-container pale-green">
+                <img src="assets/images/badge.png" width="50px" height="auto" alt="Bigger rewards method icon">
+            </div>
+            <div class="feature-detail">
+                <h3 class="green-text">Bigger Rewards Method</h3>
+                <p>Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
+            </div>
+        </div>
+    </div>
+    <!-- END OF MORE FEATURES -->
   </body>
 </html>
