Added latest code-integration seciton.

--- a/index.html
+++ b/index.html
@@ -162,5 +162,18 @@
         </div>
     </div>
     <!-- END OF MORE FEATURES -->
+
+    <!-- LATEST CODE -->
+    <div class="latest-code-container">
+        <img src="assets/images/designed_and_built_by.png" class="latest-code-container--hero" alt="Designed and built by latest code integration illustrtion"/>
+
+        <div class="latest-code-container--text">
+            <h2>Designed &amp; built by latest code integration</h2>
+            <p>The rise of mobile devices transform the way we consume information entirely and the world&apos;s most elegant channels such as Facebook.</p>
+            <a href="#" class="primary-button">Learn more</a>
+        </div>
+    </div>
+    <hr class="horizontal-line">
+    <!-- LATEST CODE -->
   </body>
 </html>
