Ultimate features section added.

--- a/index.html
+++ b/index.html
@@ -246,5 +246,60 @@
         </div>
     </div>
     <!-- END OF WHY CHOOSE -->
+
+    <!-- ULTIMATE FEATURES -->
+        <div class="ultimate-features-container">
+            <div class="ultimate-features-container--text">
+                <div class="ultimate-features-container--text--main">
+                    <h2 class="large-head-h2">Ultimate features that we built</h2>
+                    <p>The rise of mobile devices transform the way we consume information entirely</p>
+                </div>
+                    <div class="ultimate-features-details">
+                        <div class="ultimate-features-details--detail">
+                            <div class="icon-container pale-red">
+                                <img src="assets/images/web-design.png" width="50px" height="auto" alt="App development icon">
+                            </div>
+                            <div class="feature-detail">
+                                <h3>App Development</h3>
+                                <p>Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
+                            </div>
+                        </div>
+                
+                        <div class="ultimate-features-details--detail">
+                            <div class="icon-container pale-green">
+                                <img src="assets/images/ui.png" width="50px" height="auto" alt="UX planning icon">
+                            </div>
+                            <div class="feature-detail">
+                                <h3>UX Planning</h3>
+                                <p>Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ultimate-features-details">
+                        <div class="ultimate-features-details--detail">
+                            <div class="icon-container pale-yellow">
+                                <img src="assets/images/computer.png" width="50px" height="auto" alt="Bigger rewards method icon">
+                            </div>
+                            <div class="feature-detail">
+                                <h3>Cloud Storage</h3>
+                                <p>Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
+                            </div>
+                        </div>
+
+                        <div class="ultimate-features-details--detail">
+                            <div class="icon-container pale-blue">
+                                <img src="assets/images/customer-service.png" width="50px" height="auto" alt="Bigger rewards method icon">
+                            </div>
+                            <div class="feature-detail">
+                                <h3>Customer Support</h3>
+                                <p>Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="#" class="primary-button">See all</a>
+            </div>
+            <img src="assets/images/ultimate_phone.png" class="ultimate-features-container--hero" alt="Planning screenshot"/>
+        </div>
+    <!-- END OF ULTIMATE FEATURES -->
   </body>
 </html>
