Fixed card shadows and credits

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             </label>
         </div>
         <div class="pricing-container--tables">
-            <div class="pricing-container--tables--card">
+            <div class="pricing-container--tables--card card-shadow">
                 <div class="rate">
                     <div class="price">
                         <h1>$0</h1>
@@ -372,7 +372,7 @@
             <li><a href="#" class="footer-social-link"><i class="fab fa-slack"></i></a></li>
             <li><a href="#" class="footer-social-link"><i class="fab fa-github-square"></i></a></li>
         </ul>
-        <p class="footer-container--copyright">Copyright &copy; Arjun K 2020. All Rights Reserved</p>
+        <p class="footer-container--copyright">Copyright &copy; 2020. All Rights Reserved. Built by Arjun K. &amp; Designed by Ariful Rahman Tushar.</p>
     </footer>
     <!-- END OF FOOTER FEATURES -->
   </body>
