Fixed pricing button text.

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                     <li>1000&apos;s of Templates</li>
                     <li>Blog support tools</li>
                     <li>eCommerce store</li>
-                    <li><a href="#" class="primary-button" style="margin-top: 3rem">Start free trial</a></li>
+                    <li><a href="#" class="primary-button" style="margin-top: 3rem">Subscribe Now</a></li>
                     <li><a href="#" class="primary-link">Or Start 14 days trial</a></li>
                 </ul>
                
